<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/olivegreen"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="2dp"
        android:weightSum="10" >

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/email" />

        <Button
            android:id="@+id/buttonCall"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:onClick="callClicked"
            android:text="@string/call" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/start" />
    </LinearLayout>

</LinearLayout>